tp6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tp6-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: web-tp6.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tp6-web
                port:
                  number: 8080

          - path: /v2/*
            pathType: Prefix
            backend:
              service:
                name: tp6-web2
                port:
                  number: 8080
